Added on click features for crystals

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
     <div id="numberDisplay"></div>
     <div id="wins"></div>
     <div id="losses"></div>
+   
+    <div class="crystals"></div>
 
-    <img src="assets/images/crystalCollector1.jpg" width="100px" id="imageOne">
+    <!-- <img src="assets/images/crystalCollector1.jpg" width="100px" id="imageOne">
     <img src="assets/images/crystalCollector2.jpg" width="100px" id="imageTwo">
     <img src="assets/images/crystalCollector3.jpg" width="100px" id= "imageThree">
-    <img src="assets/images/crystalCollector4.jpg" width="100px" id="imageFour">
+    <img src="assets/images/crystalCollector4.jpg" width="100px" id="imageFour"> -->
 
     <div>Your Total score is:</div>
     <div id="totalScore"></div>
