--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 </body>
 
     <div id="numberDisplay"></div>
-    <div id="wins"></div>
-    <div id="losses"></div>
+    <div>Wins: <p id="wins"></p></div>
+    <div>Losses:<p id="losses"></p></div>
    
     <div class="crystals"></div>
 
