--- a/index.html
+++ b/index.html
@@ -5,51 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Stylish" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    
+
 
     <title>Crystal Collector</title>
 </head>
 
 <body>
     <div>
-        <h2>CRYSTAL COLLECOR!</h2>
+        <h2 id=heading>CRYSTAL COLLECTOR!</h2>
     </div>
+    <section id="instructions">
+        <div class="text">You will be given a random number at the start of the game.</div>
 
-    <div>You will be given a random number at the start of the game.</div>
+        <div class="text">There are four crystals below. By clicking on a crystal you will add a specific
+            amount of points to your score
+        </div>
 
-    <div>There are four crystals below. By clicking on a crystal you will add a specific
-        amount of points to your score
-    </div>
+        <div class="text">You win the game by matching your total score to the random number, you will lose the game if your
+            total score goes above the random number.
 
-    <div>You win the game by matching your total score to the random number, you will lose the game if your
-        total score goes above the random number.
+        </div>
 
-    </div>
-
-    <div>The value of each crystal is hidden from you until you click on it.</div>
-
+        <div class="text">The value of each crystal is hidden from you until you click on it.</div>
+    </section>
 </body>
 
-    <div id="numberDisplay"></div>
-    <div>Wins: <p id="wins"></p></div>
-    <div>Losses:<p id="losses"></p></div>
-   
-    <div class="crystals"></div>
+<div id="numberDisplay"></div>
+<section id=statsSection>
+    <div>Wins: <p id="wins"></p>
+    </div>
+    <div>Losses:<p id="losses"></p>
+    </div>
+</section>
 
-    <!-- <img src="assets/images/crystalCollector1.jpg" width="100px" id="imageOne">
+<div class="crystals"></div>
+
+<!-- <img src="assets/images/crystalCollector1.jpg" width="100px" id="imageOne">
     <img src="assets/images/crystalCollector2.jpg" width="100px" id="imageTwo">
     <img src="assets/images/crystalCollector3.jpg" width="100px" id= "imageThree">
     <img src="assets/images/crystalCollector4.jpg" width="100px" id="imageFour"> -->
-
+<section id="scoreBoard">
     <div>Your Total score is:</div>
     <div id="totalScore"></div>
+</section>
 
 
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
 
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 
- </html>
+</html>
